# MNIST-Libtorch-Windows

./: CMakeLists.txt  README.md  main.cpp
